# aichallenge2022-sim

./: .gitattributes  README.md  README_en.md  RULE.md  RULE_en.md
autoware/aichallenge_ws/src/aichallenge_eval/: CMakeLists.txt  package.xml
autoware/aichallenge_ws/src/aichallenge_eval/src/: score.cpp
autoware/aichallenge_ws/src/aichallenge_launch/: CMakeLists.txt  package.xml
autoware/aichallenge_ws/src/aichallenge_launch/launch/: aichallenge.launch.xml
autoware/aichallenge_ws/src/aichallenge_score_msgs/: CMakeLists.txt  package.xml
autoware/aichallenge_ws/src/aichallenge_score_msgs/msg/: Score.msg
autoware/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/: CMakeLists.txt  package.xml
autoware/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit.launch.xml
autoware/aichallenge_ws/src/aichallenge_submit/obstacle_stop_planner_custom/: CMakeLists.txt  package.xml
autoware/aichallenge_ws/src/aichallenge_submit/obstacle_stop_planner_custom/launch/: obstacle_stop_planner.launch.xml
autoware/aichallenge_ws/src/aichallenge_submit/obstacle_stop_planner_custom/src/: node.cpp
autoware/aichallenge_ws/src/aichallenge_submit/sample_code_cpp/: CMakeLists.txt  package.xml
autoware/aichallenge_ws/src/aichallenge_submit/sample_code_cpp/src/: sample.cpp
autoware/aichallenge_ws/src/aichallenge_submit/tier4_planning_launch/launch/scenario_planning/lane_driving/motion_planning/: motion_planning.launch.py  motion_planning.launch.xml
autoware/nishishinjuku_autoware_map/: lanelet2_map.osm  pointcloud_map.pcd
evaluation/: Dockerfile  build.sh  create_submit_tar.sh  main.bash  run.sh
