<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aichallenge_eval</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eee009876@github.com">ree</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>autoware_auto_system_msgs</build_depend>
  <build_depend>autoware_auto_vehicle_msgs</build_depend>
  <build_depend>aichallenge_score_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autoware_auto_system_msgs</exec_depend>
  <exec_depend>autoware_auto_vehicle_msgs</exec_depend>
  <exec_depend>aichallenge_score_msgs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
